<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LoginSkeleton</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="APP_ID">209567229179373</string>
    <string name="sign_in">Sign in</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="createaccount">Create Account</string>
    <string name="lufb">Login using Facebook</string>
    <string name="email">email@example.com</string>
    <string name="confirmpassword">confirm password</string>
    <string name="create">Create</string>

</resources>